--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "vite": "^6.3.5"
   },
   "dependencies": {
+    "dotenv": "^16.5.0",
     "openai": "^5.3.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
